--- a/Ml1020_Process_Images.ipynb
+++ b/Ml1020_Process_Images.ipynb
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,23 +186,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'train_labels' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-20-b866f921e498>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtrain_labels\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'train_labels' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0. ... 0. 0. 1.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 1. 0. 0.]\n",
+      " ...\n",
+      " [1. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 1. 0. ... 0. 0. 0.]\n",
+      " [1. 0. 0. ... 0. 0. 0.]]\n",
+      "(200, 10)\n"
      ]
     }
    ],
    "source": [
-    "train_labels"
+    "print(train_labels)\n",
+    "print(train_labels.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.27091017 0.         0.         ... 0.         0.82853937 0.        ]\n",
+      " [0.         0.         0.         ... 0.         0.8547315  0.        ]\n",
+      " [0.         0.         0.         ... 0.         0.82624149 0.        ]\n",
+      " ...\n",
+      " [0.09846868 0.         0.         ... 0.         0.88379669 0.        ]\n",
+      " [0.5169208  0.         0.         ... 0.         1.43634963 0.        ]\n",
+      " [0.48632249 0.         0.         ... 0.         1.48941195 0.        ]]\n",
+      "(200, 153600)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(train_features)\n",
+    "print(train_features.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<keras_preprocessing.image.DirectoryIterator object at 0x000002CFB4B7D208>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(train_generator)"
    ]
   },
   {
