--- a/ML1020_Pretrained_Model_Jupyter_GCP_V2.ipynb
+++ b/ML1020_Pretrained_Model_Jupyter_GCP_V2.ipynb
@@ -11,6 +11,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ===========================================================\n",
+    "# ML1020 - Final Project: Mid-Term Proposal\n",
+    "# Team Blue\n",
+    "\n",
+    "## Tyler Blakeley\n",
+    "## Benjamin Kan\n",
+    "## Avi Singh\n",
+    "## Justin Kim\n",
+    "\n",
+    "\n",
+    "# Distracted Driver Detection\n",
+    "# ==========================================================="
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The project is inspired by a past Kaggle competition hosted by State Farm, an insurance company based in the US.  Competition participants were invited to implement a machine learning algorithm to classify and predict the driver’s behavior based on the images captured from the dashboard cameras installed in the vehicles (https://www.kaggle.com/c/state-farm-distracted-driver-detection/data). The host defined the following 10 driving behavior classifications\n",
+    "\n",
+    "| Label | Driver Behavior Descriptions |\n",
+    "| ----- | ---------------------------- |\n",
+    "| c0\t| normal driving\n",
+    "| c1\t| texting - right\n",
+    "| c2\t| talking on the phone - right\n",
+    "| c3\t| texting - left\n",
+    "| c4\t| talking on the phone - left\n",
+    "| c5\t| operating the radio\n",
+    "| c6\t| drinking\n",
+    "| c7\t| reaching behind\n",
+    "| c8\t| hair and makeup\n",
+    "| c9\t| talking to passenger\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Import Keras Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -132,6 +177,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Loading the VGG16 Pre-Trained Model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
@@ -224,6 +276,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Adding One Hidden Layer on Top of VGG16"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -290,6 +349,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Set the Last Convolution Layer in VGG16 to be Re-Trainable"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -314,6 +380,13 @@
     "    else:\n",
     "        layer.trainable = False\n",
     "print(len(model.trainable_weights))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Train the Model"
    ]
   },
   {
@@ -467,13 +540,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [
@@ -565,6 +631,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Run the Predictions "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -584,6 +657,13 @@
     "probabilities = loaded_model.predict_generator(test_generator, 79727,verbose=1)\n",
     "end = time.time()\n",
     "print(end - start)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Export the Results"
    ]
   },
   {
@@ -621,13 +701,6 @@
    "source": [
     "len(probabilities)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -654,7 +727,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
