Added second model

--- a/ML1020_Pretrained_Model_Jupyter_GCP_V2.ipynb
+++ b/ML1020_Pretrained_Model_Jupyter_GCP_V2.ipynb
@@ -1039,9 +1039,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved model to disk\n"
+     ]
+    }
+   ],
    "source": [
     "model_json = model_v2.to_json()\n",
     "with open(\"/home/jupyter/Saved_Models/model_200epoch_2CNN.json\", \"w\") as json_file:\n",
