--- a/VGG19_500Epochs.ipynb
+++ b/VGG19_500Epochs.ipynb
@@ -1868,14 +1868,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3539/3987 [=========================>....] - ETA: 1:06"
+      "3987/3987 [==============================] - 592s 148ms/step\n",
+      "591.5929071903229\n"
      ]
     }
    ],
