--- a/ML1020_Pretrained_Model_Jupyter_GCP_V2.ipynb
+++ b/ML1020_Pretrained_Model_Jupyter_GCP_V2.ipynb
@@ -123,7 +123,7 @@
     "import cv2\n",
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
-    "base_dir = '/home/jupyter/Data'\n",
+    "'\n",
     "img = cv2.imread(base_dir + '/train/c6/img_380.jpg')\n",
     "img_cvt=cv2.cvtColor(img, cv2.COLOR_BGR2RGB)\n",
     "plt.imshow(img_cvt)\n",
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -257,17 +257,17 @@
       "=================================================================\n",
       "vgg16 (Model)                (None, 4, 4, 512)         14714688  \n",
       "_________________________________________________________________\n",
-      "flatten_1 (Flatten)          (None, 8192)              0         \n",
+      "flatten_2 (Flatten)          (None, 8192)              0         \n",
       "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 256)               2097408   \n",
+      "dense_3 (Dense)              (None, 256)               2097408   \n",
       "_________________________________________________________________\n",
-      "dropout_1 (Dropout)          (None, 256)               0         \n",
+      "dropout_2 (Dropout)          (None, 256)               0         \n",
       "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 10)                2570      \n",
+      "dense_4 (Dense)              (None, 10)                2570      \n",
       "=================================================================\n",
       "Total params: 16,814,666\n",
-      "Trainable params: 16,814,666\n",
-      "Non-trainable params: 0\n",
+      "Trainable params: 9,179,402\n",
+      "Non-trainable params: 7,635,264\n",
       "_________________________________________________________________\n"
      ]
     }
@@ -318,9 +318,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "conv_base.trainable = True\n",
     "\n",
@@ -351,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +373,7 @@
    ],
    "source": [
     "from keras.preprocessing.image import ImageDataGenerator\n",
-    "\n",
+    "base_dir = '/home/jupyter/Data'\n",
     "\n",
     "\n",
     "train_dir = os.path.join(base_dir, 'train')\n",
@@ -413,9 +421,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/20\n",
+      " - 96s - loss: 2.4256 - acc: 0.1215 - val_loss: 2.2726 - val_acc: 0.1600\n",
+      "Epoch 2/20\n",
+      " - 80s - loss: 2.3216 - acc: 0.1355 - val_loss: 2.2098 - val_acc: 0.1980\n",
+      "Epoch 3/20\n",
+      " - 78s - loss: 2.2464 - acc: 0.1580 - val_loss: 2.1461 - val_acc: 0.2620\n",
+      "Epoch 4/20\n",
+      " - 79s - loss: 2.1966 - acc: 0.1925 - val_loss: 2.1091 - val_acc: 0.2790\n",
+      "Epoch 5/20\n",
+      " - 72s - loss: 2.1442 - acc: 0.2150 - val_loss: 2.0030 - val_acc: 0.3649\n",
+      "Epoch 6/20\n",
+      " - 67s - loss: 2.0422 - acc: 0.2645 - val_loss: 1.9240 - val_acc: 0.3900\n",
+      "Epoch 7/20\n",
+      " - 67s - loss: 1.9637 - acc: 0.2950 - val_loss: 1.8196 - val_acc: 0.4100\n",
+      "Epoch 8/20\n",
+      " - 68s - loss: 1.8970 - acc: 0.3170 - val_loss: 1.7338 - val_acc: 0.4360\n",
+      "Epoch 9/20\n",
+      " - 65s - loss: 1.8044 - acc: 0.3563 - val_loss: 1.6453 - val_acc: 0.4730\n",
+      "Epoch 10/20\n",
+      " - 23s - loss: 1.7478 - acc: 0.3845 - val_loss: 1.5622 - val_acc: 0.5050\n",
+      "Epoch 11/20\n",
+      " - 23s - loss: 1.6667 - acc: 0.4135 - val_loss: 1.4601 - val_acc: 0.5390\n",
+      "Epoch 12/20\n",
+      " - 23s - loss: 1.6131 - acc: 0.4345 - val_loss: 1.3665 - val_acc: 0.6060\n",
+      "Epoch 13/20\n",
+      " - 23s - loss: 1.4996 - acc: 0.4725 - val_loss: 1.3009 - val_acc: 0.6060\n",
+      "Epoch 14/20\n",
+      " - 23s - loss: 1.4569 - acc: 0.4995 - val_loss: 1.2655 - val_acc: 0.5963\n",
+      "Epoch 15/20\n",
+      " - 23s - loss: 1.3685 - acc: 0.5110 - val_loss: 1.1925 - val_acc: 0.6100\n",
+      "Epoch 16/20\n",
+      " - 23s - loss: 1.3249 - acc: 0.5440 - val_loss: 1.0987 - val_acc: 0.6690\n",
+      "Epoch 17/20\n",
+      " - 23s - loss: 1.2840 - acc: 0.5580 - val_loss: 1.0785 - val_acc: 0.6810\n",
+      "Epoch 18/20\n",
+      " - 23s - loss: 1.2395 - acc: 0.5754 - val_loss: 0.9825 - val_acc: 0.6983\n",
+      "Epoch 19/20\n",
+      " - 23s - loss: 1.1805 - acc: 0.5985 - val_loss: 0.9668 - val_acc: 0.6900\n",
+      "Epoch 20/20\n",
+      " - 23s - loss: 1.1255 - acc: 0.6170 - val_loss: 0.9887 - val_acc: 0.6790\n"
+     ]
+    }
+   ],
    "source": [
     "model.compile(loss='categorical_crossentropy',\n",
     "              optimizer=optimizers.RMSprop(lr=1e-5),\n",
@@ -424,7 +479,7 @@
     "history = model.fit_generator(\n",
     "      train_generator,\n",
     "      steps_per_epoch=100,\n",
-    "      epochs=5,\n",
+    "      epochs=20,\n",
     "      validation_data=validation_generator,\n",
     "      validation_steps=50,\n",
     "      #use_multiprocessing = True,\n",
@@ -457,17 +512,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved model to disk\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "#Code to run to save model \n",
     "model_json = model.to_json()\n",
-    "with open(\"/home/jupyter/Saved_Models/model_50Epoch_1Train_1Hidden.json\", \"w\") as json_file:\n",
+    "with open(\"/home/jupyter/Saved_Models/model_20Epoch_1Train_1Hidden.json\", \"w\") as json_file:\n",
     "    json_file.write(model_json)\n",
     "# serialize weights to HDF5\n",
-    "model.save_weights(\"/home/jupyter/Saved_Models/model_50Epoch_1Train_1Hidden.h5\")\n",
+    "model.save_weights(\"/home/jupyter/Saved_Models/model_20Epoch_1Train_1Hidden.h5\")\n",
     "print(\"Saved model to disk\")"
    ]
   },
@@ -506,6 +569,34 @@
     "\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
